--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.6",
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
