--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.20.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
@@ -20,7 +21,8 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.6",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
